# zygl3

./: .gitignore  CMakeLists.txt  Dialog.txt  Makefile  README.md  Server_API.txt  TODO.txt  UDP.txt  chassis_config.json  config.json  config_full.json  install.sh  main.cpp  uninstall.sh
docs/: API.docx  API.md  API20251103.txt  API20251215.txt  HA_DESIGN.md  HTTP_RESPONSE_EXAMPLE.md  INSTALL.md  Server_API.txt  TEST_CASES.md  UDP.txt  UDP_REQUEST_HEX_EXAMPLES.md  UNIT_ARCHITECTURE.md  bmc.txt  integration_test_1.txt  integration_test_2.txt  report.txt  test_execution_log.txt  test_execution_log_latest.txt
domain/: board.h  i_chassis_repository.h  i_stack_repository.h  stack.h  task.h  value_objects.h
infrastructure/api_client/: qyw_api_client.cpp  qyw_api_client.h
infrastructure/collectors/: data_collector_service.cpp  data_collector_service.h
infrastructure/config/: chassis_factory.h  config_manager.cpp  config_manager.h
infrastructure/controller/: chassis_controller.cpp  chassis_controller.h  resource_controller.cpp
infrastructure/persistence/: in_memory_chassis_repository.h  in_memory_stack_repository.h
interfaces/cli/: cli_service.cpp  cli_service.h
interfaces/http/: alert_receiver_server.cpp  alert_receiver_server.h
interfaces/udp/: resource_monitor_broadcaster.cpp  resource_monitor_broadcaster.h
src/domain/: board.h  chassis.h  i_chassis_repository.h  service.h  stack.h  task.h  value_objects.h
src/infrastructure/api_client/: qyw_api_client.cpp  qyw_api_client.h
src/infrastructure/collectors/: data_collector_service.cpp  data_collector_service.h
src/infrastructure/config/: chassis_factory.cpp  chassis_factory.h  config_manager.cpp  config_manager.h  logger_config.cpp  logger_config.h
src/infrastructure/controller/: resource_controller.cpp  resource_controller.h
src/infrastructure/ha/: heartbeat_service.cpp  heartbeat_service.h
src/infrastructure/persistence/: in_memory_chassis_repository.h  in_memory_stack_repository.h
src/infrastructure/utils/: udp_data_printer.cpp  udp_data_printer.h
src/interfaces/bmc/: bmc_receiver.cpp  bmc_receiver.h
src/interfaces/cli/: cli_service.cpp  cli_service.h
src/interfaces/http/: alert_receiver_server.cpp  alert_receiver_server.h
src/interfaces/udp/: resource_monitor_broadcaster.cpp  resource_monitor_broadcaster.h
tests/: CMakeLists.txt  README.md  RWJK_test.cpp  RWKZ_test.cpp  XKJH_test.cpp  XKSJ_test.cpp  ZYJK_test.cpp  ZYKZ_test.cpp  integration_2_test.cpp  integration_test.cpp  mock_api_server_README.md  mock_api_server_simple.py  send_bmc_packet.py  unit1_test.cpp  unit2_test.cpp  unit3_test.cpp  unit4_test.cpp  unit5_test.cpp  unit6_test.cpp
tests/mocks/: mock_api_client.h
tests/unit_test/: RWJK_test.cpp  RWKZ_test.cpp  XKJH_test.cpp  XKSJ_test.cpp  ZYJK_test.cpp  ZYKZ_test.cpp
tests/unit_test/mocks/: mock_api_client.cpp  mock_api_client.h
tests/unit_test/utils/: test_data_generator.h
